2014-04-19  Michael Albinus  <michael.albinus@gmx.de>

	* automated/tramp-tests.el (tramp--test-check-files): Extend test.
	(tramp-test31-utf8): Let-bind also `file-name-coding-system'.

2014-04-18  Michael Albinus  <michael.albinus@gmx.de>

	* automated/tramp-tests.el (tramp-copy-size-limit): Set to nil.
	(tramp--test-make-temp-name): Optional argument LOCAL.
	(tramp--instrument-test-case): Show messages.  Catch also `quit'.
	(tramp-test10-write-region): No special test for out-of-band copy
	needed anymore.
	(tramp-test11-copy-file, tramp-test12-rename-file)
	(tramp-test21-file-links): Extend tests.
	(tramp-test20-file-modes): More robust check for user "root".
	(tramp--test-check-files): New defun.
	(tramp-test30-special-characters, tramp-test33-recursive-load)
	(tramp-test34-unload): New tests.
	(tramp-test31-utf8, tramp-test32-asynchronous-requests):  Rename.

2014-04-10  Paul Eggert  <eggert@cs.ucla.edu>

	* automated/electric-tests.el: Fix spelling error in test name.
	(whitespace-skipping-for-quotes-not-outside):
	Rename from whitespace-skipping-for-quotes-not-ouside.

2014-04-09  Glenn Morris  <rgm@gnu.org>

	* automated/python-tests.el (python-triple-quote-pairing):
	Enable/disable electric-pair-mode as needed.

	* automated/electric-tests.el (electric-pair-backspace-1):
	Replace deleted function.

2014-04-07  João Távora  <joaotavora@gmail.com>

	* automated/electric-tests.el (define-electric-pair-test):
	Don't overtest.
	(inhibit-in-mismatched-string-inside-ruby-comments): New test.
	(inhibit-in-mismatched-string-inside-c-comments): New test.

	* automated/electric-tests.el (inhibit-if-strings-mismatched):
	New test, change from `inhibit-only-of-next-is-mismatched'.

2014-04-06  João Távora  <joaotavora@gmail.com>

	* automated/python-tests.el (python-triple-quote-pairing): New test.
	(python-syntax-after-python-backspace): New test.

	* automated/electric-tests.el (electric-pair-define-test-form):
	More readable test docstrings.